2018-01-21  Dirk Eddelbuettel  <edd@debian.org>

        * README.md: Added new section 'Support'

        * vignettes/Rcpp-FAQ.Rmd (vignette): Uppercase index to 'Rcpp-FAQ';
        removed reference to Gmane which sadly is no more

2018-01-19  Dirk Eddelbuettel  <edd@debian.org>

        * vignettes/Rcpp-FAQ.Rmd (Note): Document the conda package
        `gxx_linux-64` as helpful in that environment

2018-01-16  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.12.15
        * inst/NEWS.Rd: Release 0.12.15 
        * inst/bib/Rcpp.bib: Release 0.12.15
        * vignettes/Rcpp.bib: Release 0.12.15
        * inst/include/Rcpp/config.h: Release 0.12.15

        * debian/*: Changes for Debian release of 0.12.15

2018-01-15  Dirk Eddelbuettel  <edd@debian.org>

        * inst/include/RcppCommon.h: Check for new #define RCPP_USE_UNWIND_PROTECT
        and unset if defined, this is being be used to "park" code from #789
        * inst/include/Rcpp/Environment.h: Ifdef #789 via RCPP_USE_UNWIND_PROTECT
        * inst/include/Rcpp/Language.h: Idem
        * inst/include/Rcpp/api/meat/Rcpp_eval.h: Idem
        * inst/include/Rcpp/exceptions.h: Idem
        * inst/include/Rcpp/macros/macros.h: Idem

        * inst/unitTests/runit.stack.R: Ensure test is not running

2018-01-14  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New minor version 0.12.14.8

        * inst/include/Rcpp/traits/is_na.h (Rcpp): Also speed up
        Rcpp::is_na<Rcomplex>

2018-01-14  Lionel Henry  <lionel@rstudio.com>

        * inst/unitTests/cpp/stack.cpp: Move stack unwinding tests from misc.cpp
        * inst/unitTests/runit.stack.R: Move stack unwinding tests from misc.R;
        disaggregate stack unwinding tests; also disable for now

2018-01-11  Kirill Müller  <krlmlr@mailbox.org>

        * inst/include/Rcpp/traits/is_na.h: Speed up Rcpp::is_na<double>()

2018-01-09  Iñaki Ucar  <i.ucar86@gmail.com>
